--- a/Ariane6/Engines/Vinci/ariadne_vinci.cfg
+++ b/Ariane6/Engines/Vinci/ariadne_vinci.cfg
@@ -17,10 +17,10 @@ PART
 	subcategory = 0
 	title = F-10A "Gallileo" Cryogenic Engine
 	manufacturer = Bob Kerman Industries
-	description = By using cryogenic hydrogen and oxygen as propellants, engines are capable of reaching efficiency levels unheard of using traditional propellants. The F-10A "Gallileo" upper stage engine is the latest Eukerban engine to use these fuels. Use one or two as the engines for the Ariadne VI upper stage. Be sure to check that any tanks connected to it are filled with the correct propellants, and remember its fuel will boil off over time. Has switcheable versions.
+	description = By using cryogenic hydrogen and oxygen as propellants, engines are capable of reaching efficiency levels unheard of using traditional propellants. The F-10A "Gallileo" upper stage engine is the latest Eukerban engine to use these fuels. Use one as the engine for the Ariadne VI upper stage. Be sure to check that any tanks connected to it are filled with the correct propellants, and remember its fuel will boil off over time. Has switcheable versions.
 	real_title = Vinci Cryogenic Engine
-	real_manufacturer = Pratt & Whitney
-	real_description = By using cryogenic hydrogen and oxygen as propellants, engines are capable of reaching efficiency levels unheard of using traditional propellants. The Vinci upper stage engine is the latest Eukerban engine to use these fuels. Use one or two as the engines for the Ariadne VI upper stage. Be sure to check that any tanks connected to it are filled with the correct propellants, and remember its fuel will boil off over time. Has switcheable versions.
+	real_manufacturer = ArianeGroup
+	real_description = By using cryogenic hydrogen and oxygen as propellants, engines are capable of reaching efficiency levels unheard of using traditional propellants. The Vinci upper stage engine is the latest European engine to use these fuels. Use one as the engine for the Ariane 6 upper stage. Be sure to check that any tanks connected to it are filled with the correct propellants, and remember its fuel will boil off over time. Has switcheable versions.
 	attachRules = 1,0,1,0,0
 	mass = 0.275 // 25% thrust scaling // 0.550
 	// heatConductivity = 0.06 // half default
@@ -151,7 +151,7 @@ PART
 		SUBTYPE
 		{
 			name = Vinci-240
-			title = F-10A "Gallileo"
+			title = F-10V "Gallileo"
 			descriptionSummary = A hydrolox cryogenic engine. The Gallileo is very efficient. It is used on the Ariadne VI upper stage.
 			real_title = Vinci
 			real_descriptionSummary = A hydrolox cryogenic engine. Vinci is very efficient. It is used on the Ariane 6 upper stage.
@@ -178,11 +178,11 @@ PART
 		SUBTYPE
 		{
 			name = Vinci-4
-			title = F-10S "Gallileo"
-			descriptionSummary = Not actually real version of Vinci featuring a sea level optimized nozzle.
+			title = F-10S "Gallileo" Sealevel (Speculative)
+			descriptionSummary = Not actually real version of Gallileo featuring a sea level optimized nozzle.
 			real_title = Vinci Sealevel (Speculative)
 			real_descriptionSummary = Not actually real version of Vinci featuring a sea level optimized nozzle.
-			descriptionDetail = <b>Thrust:</b> 23.7 kN ASL / 25.1 kN Vac.\n<b>Isp:</b> 351.6 s ASL / 371.4 s Vac.
+			descriptionDetail = <b>Thrust:</b> 23.8 kN ASL / 25.1 kN Vac.\n<b>Isp:</b> 351.6 s ASL / 371.4 s Vac.
 			addedCost = 240
 			addedMass = -0.19
 			defaultSubtypePriority = 0
