--- a/AriadneOT/Ariane6/Engines/Vinci/ariadne_vinci.cfg
+++ b/AriadneOT/Ariane6/Engines/Vinci/ariadne_vinci.cfg
@@ -3,10 +3,7 @@ PART
 	name = ariadne_vinci
 	module = Part
 	author = BKI
-	MODEL
-	{
-		model = AriadneOT/Ariane6/Engines/Vinci/BKI_Vinci
-	}
+	mesh = BKI_Vinci.mu
 	rescaleFactor = 1.0
 	node_stack_top = 0.0, 1.0403, 0.0, 0.0, 1.0, 0.0, 1
 	node_stack_bottom = 0.0, -1.04153, 0.0, 0.0, -1.0, 0.0, 1
