--- a/AriadneOT/Ariane6/Engines/Vinci/ariadne_vinci.cfg
+++ b/AriadneOT/Ariane6/Engines/Vinci/ariadne_vinci.cfg
@@ -5,8 +5,8 @@ PART
 	author = BKI
 	mesh = BKI_Vinci.mu
 	rescaleFactor = 1.0
-	node_stack_top = 0.0, 1.0403, 0.0, 0.0, 1.0, 0.0, 1
-	node_stack_bottom = 0.0, -1.04153, 0.0, 0.0, -1.0, 0.0, 1
+	node_stack_top = 0.0, 1.20782, 0.0, 0.0, 1.0, 0.0, 1
+	node_stack_bottom = 0.0, -0.874016, 0.0, 0.0, -1.0, 0.0, 1
 	TechRequired = generalRocketry
 	entryCost = 2000
 	cost = 270
@@ -154,9 +154,9 @@ PART
 			real_descriptionSummary = A hydrolox cryogenic engine. Vinci is very efficient. It is used on the Ariane 6 upper stage.
 			descriptionDetail = <b>Thrust:</b> 1.97 kN ASL / 45 kN Vac.\n<b>Isp:</b> 20 s ASL / 457 s Vac.
 			defaultSubtypePriority = 1
-			transform = HigherNozzleExtension
-			transform = NozzleExtension
-			transform = Shield
+			transform = 0NozzleExtensionShort
+			transform = NozzleExtensionLong
+			transform = Collar
 
 			MODULE
 			{
@@ -183,7 +183,6 @@ PART
 			addedCost = 240
 			addedMass = -0.19
 			defaultSubtypePriority = 0
-			transform = NozzleInside
 
 			MODULE
 			{
@@ -216,8 +215,8 @@ PART
 		name = ModuleGimbal
 		gimbalResponseSpeed = 15
 		useGimbalResponseSpeed = true
-		gimbalTransformName = GimbalTransform
-		gimbalRange = 4
+		gimbalTransformName = gimbal
+		gimbalRange = 5
 	}
 
 	MODULE
@@ -231,7 +230,7 @@ PART
 	MODULE
 	{
 		name = ModuleSurfaceFX
-		thrustProviderModuleIndex = 0
+		thrustProviderModuleIndex = 1
 		fxMax = 0.3
 		maxDistance = 30
 		falloff = 1.7
