--- a/AriadneOT/Ariane6/FuelTanks/Ariane6/ULPM/ULPMTank.cfg
+++ b/AriadneOT/Ariane6/FuelTanks/Ariane6/ULPM/ULPMTank.cfg
@@ -30,6 +30,7 @@ PART
 	maxTemp = 2000 // = 2900
 	breakingForce = 112
 	breakingTorque = 112
+	vesselType = Probe
 	bulkheadProfiles = size1p5, srf
 
 	tags = lho oxidizer liquid hydrogen fuel tank 3.375 3.5 3.125 centaur bossart ?ariadne ariane ?VI ?6 common
@@ -48,12 +49,12 @@ PART
 	}
 	EFFECTS
 	{
-		rcs
+		running
 		{
 			AUDIO_MULTI_POOL
 			{
 				channel = Ship
-				transformName = RCSJet
+				transformName = RCSjet
 				clip = sound_rocket_mini
 				volume = 0.0 0.0
 				volume = 0.02 0.1
@@ -63,30 +64,37 @@ PART
 				pitch = 1.0 1.5
 				loop = true
 			}
-			MODEL_MULTI_PARTICLE
-			{
-				name = sharp
-				modelName = Bluedog_DB/FX/PlumeParty/RCS/soyuzShock_0p4
-				transformName = rcsTransform
-				emission = 0.0 0.0
-				emission = 0.1 0.3
-				emission = 1.0 1.0
-				speed = 0.0 0.8
-				speed = 1.0 1.0
-				localRotation = -90, 0, 0
-			}
-			MODEL_MULTI_PARTICLE
-			{
-				name = soft
-				modelName = Bluedog_DB/FX/PlumeParty/RCS/soyuzWide_0p4
-				transformName = rcsTransform
-				emission = 0.0 0.0
-				emission = 0.1 0.3
-				emission = 1.0 1.0
-				speed = 0.0 0.8
-				speed = 1.0 1.0
-				localRotation = -90, 0, 0
-			}
+		}		
+	}
+	MODULE
+	{
+		name = ModuleWaterfallFX
+		// This is a custom name
+		moduleID = rcsFX
+		// This links the effects to a given ModuleEngines
+		engineID = basicEngine
+
+		// List out all controllers we want available
+		CONTROLLER
+		{
+			name = atmosphereDepth
+			linkedTo = atmosphere_density
+		}
+		CONTROLLER
+		{
+			name = rcs
+			linkedTo = rcs
+		}
+	 
+		TEMPLATE
+		{
+			// This is the name of the template to use
+			templateName = waterfall-rcs-jet-1
+			// This field allows you to override the parentTransform name in the EFFECTS contained in the template
+			overrideParentTransform = RCSJet
+			position = 0,-0.028,0.0
+			rotation = 0, 0, 180
+			scale = 0.3, 0.4, 0.3
 		}
 	}
 	RESOURCE
@@ -108,7 +116,6 @@ PART
 		hasHibernation = True
 		hibernateOnWarp = True
 	}
-
 	MODULE
 	{
 		name = ModuleReactionWheel
@@ -121,7 +128,6 @@ PART
 			rate = 0.05
 		}
 	}
-
 	MODULE
 	{
 		name = ModuleSAS
@@ -137,10 +143,9 @@ PART
 		requiredResource = ElectricCharge
 		antennaPower = 500000
 		optimumRange = 2500
-		packetFloor = .1
+		packetFloor = 0.1
 		packetCeiling = 5
 	}
-
 	RESOURCE
 	{
 		name = ElectricCharge
@@ -151,23 +156,12 @@ PART
 	MODULE
 	{
 		name = ModuleRCSFX
-		stagingEnabled = true
+		stagingEnabled = False
 		thrusterTransformName = RCSJet
-		thrusterPower = 0.2
+		thrusterPower = 1
 		resourceName = MonoPropellant
 		resourceFlowMode = STAGE_PRIORITY_FLOW
-		runningEffectName = rcs
-
-		PlumeName = soyuz_0p4
-		PlumeScale = 1,1,1
-
-		enablePitch = true
-		enableYaw = true
-		enableRoll = true
-		enableX = false
-		enableY = false
-		enableZ = true
-
+		runningEffectName = running
 		atmosphereCurve
 		{
 			key = 0 240
